add content of home page and image for home page

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -39,14 +39,19 @@
   "about": {
     "factory": {
       "argentina": {
-        "alt": "مجموعة كبور",
-        "title": "مجموعة كبور الدولية",
-        "desc": "شركة رائدة في إنتاج وتصنيع وتوزيع المتة على مستوى سوريا والوطن العربي، لها معامل في الأرجنتين وسوريا وتتبع أعلى درجات التعقيم وتستخدم التكنولوجيا لإنتاج أفضل مشروب."
+        "alt": "مجموعة كبور الدولية – معملنا في سوريا",
+        "title": "مجموعة كبور الدولية – معملنا في سوريا",
+        "desc": "شركة كبور هي عائلية  بدأت رحلتها في عام 1960 كأول مستورد للمتة من الأرجنتين للسوق السوري، حيث اكتسبت خبرة طويلة وشهرة واسعة بفضل جودة منتجاتها واهتمامها باختيار أفضل أنواع المتة لتلبية أذواق المستهلكين. ومن خلال هذه الخبرة العريقة، اكتسبت الشركة ثقة الموردين وعززت مكانتها كشركة رائدة في مجال المتة في سوريا وحصلنا على وكالات وامتيازات تعبئة رسمية في سوريا من علامات تجارية رائدة مثل بيبوري وترغواي وفي عام 1985 تم إنشاء معمل لتحضير وتعبئة المتة في سوريا - منطقة يبرود. وقد أثمر هذا التخصص عن امتلاكنا ماركة خاصة بنا في السوق تحمل اسمًا يُجسّد الثقة والجودة (خارطة الخضراء)، وتُعبّر عن التزامنا بتقديم منتجات تلبي أذواق المستهلكين وتُحاكي توقعاتهم. "
       },
       "syria": {
+        "alt": "شركة غروبو كبور – معملنا في الأرجنتين",
+        "title": "شركة غروبو كبور – معملنا في الأرجنتين",
+        "desc": "في عام 2007 تم التحضير لإنشاء مشروع استراتيجي في الأرجنتين لزراعة وتجفيف وطحن المتة وتصديرها إلى سوريا وهي الآن من الشركات الرائدة في الأرجنتين التي تحافظ على الجودة والسعر للمتة المصدرة إلى سوريا."
+      },
+      "campo": {
         "alt": "شركة كامبو",
         "title": "شركة كامبو",
-        "desc": "شركة رائدة في إنتاج وتصنيع وتوزيع المتة على مستوى سوريا والوطن العربي، لها معامل في الأرجنتين وسوريا وتتبع أعلى درجات التعقيم وتستخدم التكنولوجيا لإنتاج أفضل مشروب."
+        "desc": "في المقابل، قامت شركة كامبو بتوسيع نشاطاتها لتشمل مجموعة متنوعة من المنتجات، حيث دخلت مجال استيراد وتعبئة الشاي الأسود، ثم أنشأت معملًا متخصصًا للشاي الأخضر والخلطات العشبية والطبية، معتمدة على أبحاث ودراسات دقيقة لضمان جودة منتجاتها. كما توسعت شركة كامبو بإطلاق خط إنتاج للقهوة المحمصة والمعبأة ضمن أكياس مضغوطة، وأنشأت معملًا متطورًا للقهوة مجهز بأحدث التقنيات.ولم تتوقف شركة كامبو عند هذا الحد، بل أضافت إلى محفظتها منتجات المشروبات الساخنة البودرة والحليب البودرة، مما جعلها قادرة على تقديم تشكيلة واسعة ومتنوعة تلبي كافة احتياجات المستهلكين في السوق السوري."
       }
     }
   },
@@ -94,13 +99,13 @@
   },
   "quality": {
     "img": "صورة الجودة",
-    "title": "الجودة",
-    "desc": "أعشاب ونباتات كامبو من أجود أنواع الأعشاب ومطابقة للمواصفات القياسية، طبيعية 100% ، لا تحوي على منكهات صناعية، معقمة بأشعة (UV)  تحت إشراف صيدلاني مخبري."
+    "title": "جلسات التذوق الاحترافية للمتة",
+    "desc": "تُعد جلسات التذوق التي نعقدها جزءًا أساسيًا من عملية تطوير منتجات المتة لدينا. نجمع فيها فريقًا من الخبراء والمختصين بالإضافة إلى مجموعة من العملاء المهتمين لتذوق ومناقشة مختلف الخلطات الجديدة والمطورة المنتجات بما يتناسب مع أذواقهم"
   },
   "laboratories": {
     "img": "صورة المختبرات",
-    "title": "مختبراتنا",
-    "desc": "يتم فحص العينات ( شاي – أعشاب طبية) عند الاستلام في المخبر عن طريق أخذ عينات من الشحنات المرسلة من الموردين وتقييمها من حيث خلوها من الشوائب والملوثات ."
+    "title": "آلات حديثة ومتطورة بمعملنا – نقلة نوعية في جودة الإنتاج",
+    "desc": "نفخر في معملنا باستخدام أحدث التقنيات والمعدات المتطورة التي تضمن أعلى مستويات النظافة والدقة في كل خطوة من خطوات الإنتاج. تتميز خطوط الإنتاج لدينا بأنها آلية بالكامل، حيث لا تلمس المنتجات أيدي العاملين أثناء مراحل التحضير والتعبئة، مما يقلل من مخاطر التلوث ويضمن سلامة وجودة المنتج النهائي.بهذه التقنيات المتقدمة، نؤمن تقديم منتجات بأعلى معايير الجودة."
   },
   "technology": {
     "img": "صورة التكنولوجيا",
@@ -108,7 +113,7 @@
     "desc": "أعشاب ونباتات كامبو من أجود أنواع الأعشاب ومطابقة للمواصفات القياسية، طبيعية 100% ، لا تحوي على منكهات صناعية، معقمة بأشعة (UV)  تحت إشراف صيدلاني مخبري."
   },
   "centerTitle": "مراكز التوزيع داخل سوريا",
-  "centerDesc": "تصدر مجموعة كبور الدولية منتجاتها إلى مختلف المحافظات داخل سوريا، يمكنكم التواصل مع مراكزنا عن طريق الأرقام التالية",
+  "centerDesc": "تمتلك شركتنا شبكة واسعة من مراكز التوزيع المنتشرة في جميع محافظات سوريا، مما يتيح لنا تلبية احتياجات الأسواق المحلية بكفاءة وسرعة عالية",
   "centers": [
     {
       "name": "مركز دمشق",
@@ -185,7 +190,7 @@
   "product": {
     "1": {
       "name": "خارطة",
-      "desc": "أعشاب ونباتات كامبو من أجود أنواع الأعشاب ومطابقة للمواصفات القياسية، طبيعية 100% ، لا تحوي على منكهات صناعية، معقمة بأشعة (UV)  تحت إشراف صيدلاني مخبري.",
+      "desc": "نحن نتميّز بخبرة عريقة في مجال تعبئة المتة، حيث نمتلك معملًا متطوّرًا مزوّدًا بأحدث الآلات فقد أثمر هذا التخصص عن امتلاكنا ماركة خاصة بنا في السوق تحمل اسمًا يُجسّد الثقة والجودة (خارطة الخضراء)، وتُعبّر عن التزامنا بتقديم منتجات تلبي أذواق المستهلكين وتُحاكي توقعاتهم.",
       "details":{
         "descTitle": "الوصف",
         "desc" : [
@@ -237,7 +242,7 @@
     },
     "2": {
       "name": "بيبوري",
-      "desc": "هذا نص عربي تجريبي يصف المنتج الثاني.",
+      "desc": "نفخر بأننا وكيل وممثل لعلامة بيبوري، وهي واحدة من أبرز علامات المتة المستوردة في السوق السوري، والمعروفة بجودتها العالية وتنوع خلطاتها. بفضل علاقتنا الوثيقة مع الموردين وشركائنا في الأرجنتين، حصلنا على امتياز تعبئة وتوزيع هذه العلامة رسميًا في سوريا، مما يعكس ثقة الشركاء الدوليين بخبرتنا وكفاءتنا في هذا المجال.",
             "details":{
         "descTitle": "الوصف",
         "desc" : [
@@ -289,7 +294,7 @@
     },
     "3": {
       "name": "ترغواي",
-      "desc": "هذا نص عربي تجريبي يصف المنتج الثالث.",
+      "desc": "نغتحر بأن شركتنا تحمل الامتياز الحصري لعلامة Taragüi، إحدى أشهر علامات المتة العالمية. هذا الامتياز يعكس التقدير العالمي لمكانتنا وخبرتنا في السوق، ويمنحنا الحق الرسمي في تعبئة وتوزيع منتجات ترغواي في سوريا، بما يضمن للمستهلك منتجًا أصليًا بجودة عالية تحت إشراف مباشر من الشركة الأم.",
             "details":{
         "descTitle": "الوصف",
         "desc" : [
@@ -757,32 +762,26 @@
     },
     "12": {
       "name": "بابونج",
-      "desc": "هذا نص عربي تجريبي يصف المنتج الرابع.",
-            "details":{
+      "desc": "",
+      "details":{
         "descTitle": "الوصف",
         "desc" : [
-          "يُعتبر مشروب الزهورات من أفضل المشروبات التي تحمي من نزلات البرد والإنفلونزا والسعال الذي يزداد في فصل الشتاء.",
-          "كما أنه يُساعد على طرد السموم من الجسم، ويقوي جهاز المناعة، ويُخفف الصداع، ويُزيل الانتفاخ، ويُساعد على الهضم."
+          "مطابقة للمواصفات القياسية السورية برقم : 3240 /2010 ",
+          ""
         ],
         "IngredientsTitle": "المكونات",
         "Ingredients": [
-          "ورد جوري",
-          "مليسة",
-          "نعنع فلفلي",
-          "متة",
-          "زهرة الربيع",
-          "بابونج",
-          "شاي أخضر"
+          "أزهار البابونج المجففة طبيعية 100%"
         ],
         "usageInstructionsTitle": "طريقة التحضير",
         "usageInstructions": [
-          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زهورات طبيعية) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
-          "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
+          "للحفاظ على النكهة الرقيقة كاملة، ضع كيسًا من الكامبو (البابونج) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
+          "إذا كنت ترغب في الحصول على طعم أقوى، اترك الكيس في الماء لمدة 4 دقائق"
         ],
         "poductSpecifications": [
            {
               "title": "الوزن الصافي",
-              "desc": "- 44g"
+              "desc": "44g"
           },
           {
               "title": "عدد الظروف",
@@ -791,18 +790,6 @@
           {
               "title": "النوع",
               "desc": "مشروب ساخن"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
-          },
-          {
-              "title": "center",
-              "desc": "center"
           }
         ]
       }
@@ -1868,19 +1855,24 @@
   },
   "studyData": [
     {
-      "ResearchersStudy": "رئيس الجمعية الدولية للغذاء الصافي (الطبيعي) مقرها في باريس",
-      "ResearchersName": "Dr. A. Lenglet",
-      "desc": "الملاحظة الأكثر بروزاً بالنسبة لتأثير المتة على الأعضاء الطبيعية هي أنها تعمل مباشرة مع مجموعة النظام العصبي والعقل – النخاع الشوكي.إن شرب المته أثناء الصباح قبل الإفطار مع قليل من السكر تعطي شعور حيوي بالراحة، وتزيد من المقاومة اتجاه التعب وتنشط الحياة الدماغية. تعتبر المتة واحدة من أهم المشروبات ويمكن أن تكون الوحيدة من بين الوسائل الطبيعية التي يملكها الإنسان من أجل الاستفادة الأعظمية من طاقتها الدفينة حيث يمكننا مقارنتها كمدخر للطاقة"
+      "ResearchersStudy": "اختصاصي التغذية",
+      "ResearchersName": "د. ريتشارد وايسمان ",
+      "desc": "المتة تحتوي على مكونات طبيعية تعزز من مستوى الطاقة والتركيز، بالإضافة إلى دعم الجهاز المناعي ومحاربة الالتهابات"
     },
     {
-      "ResearchersStudy": "من جامعة باريس",
-      "ResearchersName": "Dr. M. Thévenard",
-      "desc": "تحتوي المتة على قلويات والتي من خلال مظهرها وتعاملها الفوري مع مبادئ الأعضاء فإنها عنصر مغذي هام بحيث يعيد النشاط العام للجسم. تعتبر من خلال تركيبها الخاص من الناحية الصحية متفوقة لأنها تحتوي على القليل من الزيوت التي تتواجد بشكل رئيسي في المشروبات المماثلة الأخرى والتي لا تسبب الأرق كما أنها مساعدة على الهضم.الشكر لمحاسنها المقوية والمنشطة ولخلوها من الضرر، فإن القائمين على الصحة يعتبرون أن المتة مشروب من خلال صفاتها الجيدة قادرة على مواجهة المشروبات الكحولية"
+      "ResearchersStudy": "أخصائي الأعشاب الطبية",
+      "ResearchersName": "البروفيسور خوان بيريز",
+      "desc": "العديد من الدراسات أظهرت أن المتة تساهم في تحسين عملية الهضم وتقليل التهابات المفاصل، كما تساعد على تنظيم مستويات السكر في الدم."
     },
     {
-      "ResearchersStudy": "بحث منشور في Presse Medical",
-      "ResearchersName": "Dr. J. Sehunk de Goldfian",
-      "desc": "يمكننا الاستنتاج بأن المتة تعتبر منشط عام (من أصل نباتي)، بالإضافة إلى أنها مقو عام، وتستخدم لعلاج داء الحفر، ومقو للقلب، والأوعية والنخاع الشوكي.تعمل المتة أيضاً كمخدر خفيف للطبقة المخاطية الهضمية، تقلل من الشعور بالجوع، وتقوي الألياف المسطحة الموجودة في جدران الأمعاء.هذا بالإضافة إلى أنها مضاد حيوي عام، ويساعد على التئام الجروح، ومضاد للتخمة، ومضاد للحمى، ومضاد للجراثيم."
+      "ResearchersStudy": "طبيب مختص في الطب البديل",
+      "ResearchersName": "الدكتور توماس ميلر ",
+      "desc": "شاي المتة له تأثير محفز طبيعي دون التسبب في التوتر، ويعتبر بديلاً ممتازًا للقهوة، مع فوائد صحية إضافية مثل تحسين صحة القلب والأوعية الدموية"
+    },
+    {
+      "ResearchersStudy": "خبيرة صحة عامة",
+      "ResearchersName": "الدكتورة إميلي روبرتس",
+      "desc": "المتة غنية بمضادات الأكسدة التي تساهم في مكافحة الشيخوخة وتحسين وظائف الدماغ، كما أنها تعزز عملية الأيض وتساعد في خسارة الوزن"
     }
   ],
   "ReadMore": "قراءة المزيد",
@@ -2108,6 +2100,6 @@
     "9": "تحتوي تقريباً على كل الفيتامينات والمعادن والأحماض الأمينية التي يحتاجها جسم الإنسان"
   },
   "expotTitle": "التوزيع والتصدير",
-  "exportDesc": "تصدر مجموعة كبور الدولية منتجاتها إلى مختلف المحافظات داخل سوريا وعدد من الدول حول العالم، حيث تملك شبكة توزيع قوية تشمل عدد من البلدان حول العالم"
+  "exportDesc": "•ونُعتبر كبار المصدرين لعشبة المتة المعبأة إلى مختلف أنحاء العالم، حيث نتمتع بخبرة طويلة في تلبية احتياجات الأسواق الدولية ونعمل باستمرار على توسيع نطاق تصديرنا لنصل إلى أكبر عدد ممكن من البلدان، مع الالتزام التام بمعايير الجودة العالمية ."
 
 }
