add images for herbs

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -2336,6 +2336,78 @@
           }
         ]
       }
+    },
+    "57": {
+      "name": "زنجبيل بالليمون ",
+      "desc": "مزيج منعش من الزنجبيل الحار والليمون الحامضي، يقدم نكهة قوية ودعماً ممتازًا للمناعة والهضم.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "كل ظرف مغلف للحفاظ على الزيوت الطيارة والفعالية.",
+          ""
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          "يعزز المناعة ويحارب الفيروسات.",
+          "يساعد على الهضم ويخفف الغثيان.",
+          "يطهر الحلق ويقلل من التهاباته."
+        ],
+        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructions": [
+          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زنجبيل بالليمون) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
+          "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
+        ],
+        "poductSpecifications": [
+           {
+              "title": "الوزن الصافي",
+              "desc": ""
+          },
+          {
+              "title": "عدد الظروف",
+              "desc": "20"
+          },
+          {
+              "title": "النوع",
+              "desc": "أعشاب"
+          }
+        ]
+      }
+    },
+    "58": {
+      "name": "زوفا ",
+      "desc": "زوفا (hyssop) هي عشبة طبية تقليدية تُستخدم لتهدئة الجهاز التنفسي وتعزيز الصحة العامة.",
+      "details":{
+        "descTitle": "الوصف",
+        "desc" : [
+          "تتميز بطعم عطري قوي، وتُقدم في 20 ظرفًا مغلفًا لضمان الجودة والنقاوة.",
+          ""
+        ],
+        "IngredientsTitle": "الفوائد",
+        "Ingredients": [
+          "تُساعد على تنظيف الجهاز التنفسي وتخفيف السعال.",
+          "تُقلل من التشنجات المعوية والغازات.",
+          "تُعزز مناعة الجسم بشكل عام."
+        ],
+        "usageInstructionsTitle": "طريقة التحضير",
+        "usageInstructions": [
+          "للحفاظ على نكهته المميزة، ضع كيسًا من الكامبو (زوفا) في كوب سعة 250 مل، ثم صب الماء المغلي واتركه لمدة 3 دقائق.",
+          "إذا كنت ترغب في نكهة أقوى، اترك الكيس في الماء لمدة 4 دقائق."
+        ],
+        "poductSpecifications": [
+           {
+              "title": "الوزن الصافي",
+              "desc": ""
+          },
+          {
+              "title": "عدد الظروف",
+              "desc": "20"
+          },
+          {
+              "title": "النوع",
+              "desc": "أعشاب"
+          }
+        ]
+      }
     }
   },
   "event": {
